# NativeDemo

./: .gitignore  README-成功编译ffmpeg.md  README-编译ffmpeg生成so.md  README.md  build_android.sh  build_android_lxh.sh  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/major/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/aaa/: HttpConnect.cpp  HttpConnect.h  native-lib.cpp  test.cpp
app/src/main/cpp/bbb/: stackblur.c  stackblur.h
app/src/main/cpp/ccc/: test.cpp
app/src/main/java/com/major/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/major/demo/: ExampleUnitTest.java
ffmpeg/: .gitignore  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  FFMPEG.cpp
ffmpeg/src/main/java/com/major/ffmpeg/: FFMPEGHelper.java  MainActivity.java
ffmpeg/src/main/res/layout/: activity_main.xml
mediaplayer/: build.gradle
mediaplayer/src/androidTest/java/com/major/mp/: ExampleInstrumentedTest.java
mediaplayer/src/main/: AndroidManifest.xml
mediaplayer/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  MyFFmpeg.cpp  MyFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  player.cpp  safe_queue.h
mediaplayer/src/main/java/com/major/mp/: MainActivity.java  MediaPlayer.java
mediaplayer/src/main/res/layout/: activity_main.xml
mediaplayer/src/test/java/com/major/mp/: ExampleUnitTest.java
